plang/testing/logs/false-incorrect/113/program113.p.p
sjtcS :- (z (A0gGR) (nVS gOnZ (DvMi9)) (c5EX (np (XF) (iLW R M)) AP4MI) uDsa); ((a X (oR cRwq (sRH37)) (dkoZn g2 (w (bE4R (SbLF) BlYKA BeM) (IdGP) FGIR (vlr6H)) bhPW), iIz FaGJ wfOd); zcCoq j (c7H) (D0V0) CL; eKd (C74) XU7, zC hG Le5 ir5A ERTeM).
w OrLA7 drm :- (bK5hl F6 q1p W, (x); zI (x sy (BZ) (lfq hsET (LPHs))), h D, q NMN i1 jp).


c (EY) (v WF31a OewAw (JKNp)) (hG E (E8OMy) (aqV5 (FuxQ))).


oei (CQYH) (AXUIp) y.


wSM.
dDudT mdtN oJaB.


xpfb8 (tZSx) vx Y.

fjR4y seT (AJ) (fKbJj (h) xji) :- j5A1.

qMt8.

mSnl (aRj0 zytNU (ooF (z H T4GE M (BUg)))) (io jfbgK (yesl (tn (OkP) (Kl) (H3)) (XIRQ) (yrua (iZCn (q9Tz) YP wUQia (XTN)) Z5mq ml (QqYoq)) H)) (b1me8 (OQRzd) Ky4h X (gteJ qPLI n9dYs cZ (zcT (mCY7k (fE (c QsME)) (kpf Swtty f22))))) n7fm.
hVK3L (uVO iVtHK aLk6 (CBdr)) (WnoG) :- (((eq9))), k.
d (E) wr9P (XxwPD) (hS1n R9 (HwP) qJd o2cG2) :- ((kZ a9Pn i pQ4ZJ CSdfg); j7WY; cAzg, xaQLh (iw8 (WG) pIaB OrFKe NzF), y; eThB n8W XTcn4 GEVK T).


yX7x (m8FX (p (Af))) F (GAl3k) :- (nP ZBFS6 (AgSs) iyElW; ((b5Rx (iLbzo (j aau) (UpFM) (mPdl (gGfv bO (ru W6SjH (N))))) (s4EN Z PNc4 (NK7ti) CJJ))), (is); ypQ s x, o (GRt)).

k ESfY0.
dn xz (Hl) (OsU) (t J Kaj9g (DX6) YhX) :- sg.
uWV5 X :- ((w qja), fm (e) Gw hDYwF R39AH, (nzt9 (TCgU) (m3wCZ (o (p xu (stf2g kZ (bi (toY g)) Fz) bwp) D7 Trgs) P N (NZsJ))); (kC gEXst); lrndZ, a31Yz j G (AL) (PNvoE)).

xKG (DF).

? (brf j8; aW).


